fix: hide assetbrowse left sidebar on mobile

--- a/webapp/src/components/AssetBrowse/AssetBrowse.css
+++ b/webapp/src/components/AssetBrowse/AssetBrowse.css
@@ -138,6 +138,10 @@
     max-width: 100%;
   }
 
+  .AssetBrowse .sidebar {
+    display: none;
+  }
+
   .AssetBrowse .Layout .right.column > div {
     width: 100%;
   }
